# simple-price-oracle-avs-rust-example

./: .env.example  .gitignore  .gitmodules  README.md  docker-compose.yml
Execution_Service/: Cargo.toml  Dockerfile  README.md  notary_config.toml
Execution_Service/config/: default.yaml
Execution_Service/src/: main.rs
Execution_Service/src/handlers/: task.rs
Execution_Service/src/services/: dal_service.rs  ipfs_service.rs  mod.rs  notary_server.rs  notary_service.rs  oracle_service.rs  tls_prove.rs
Execution_Service/src/services/tls/: mod.rs  present.rs  prove.rs
Validation_Service/: Cargo.toml  Dockerfile
Validation_Service/src/: main.rs
Validation_Service/src/handlers/: task.rs
Validation_Service/src/services/: ipfs_service.rs  mod.rs  validation_service.rs  verify.rs
