[package]
name = "Execution_Service"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tls-prove"
path = "src/services/tls_prove.rs"

[[bin]]
name = "attestation-prove"
path = "src/services/tls/prove.rs"

[[bin]]
name = "attestation-present"
path = "src/services/tls/present.rs"

[dependencies]
actix-web = "4.9.0"
dotenv = "0.15.0"
reqwest = { version = "0.11", features = ["json", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full", "macros"] }
web3 = "0.15"
secp256k1 = "0.11"
ethabi = "15.0.0"
hex = "0.4"
ethers = "2.0"
alloy = { version = "0.11.0", features = ["full"] }
alloy-sol-types = "0.8.19"
tlsn-prover = { path = "tlsn-src/crates/prover" }
tlsn-core = { path = "tlsn-src/crates/core" }
tlsn-common = { path = "tlsn-src/crates/common" }
notary-server = { path = "tlsn-src/crates/notary/server" }
notary-client = { path = "tlsn-src/crates/notary/client" }
anyhow = "1.0"
futures-util = "0.3"
tokio-util = { version = "0.7", features = ["compat"] }
config = "0.14"
eyre = "0.6"
async-tungstenite = { version = "0.21", features = ["tokio-native-tls"] }
tokio-tungstenite = "0.20"
bincode = "1.3"
tlsn-examples = { path = "tlsn-src/crates/examples" }
tlsn-formats = { path = "tlsn-src/crates/formats" }
http-body-util = "0.1.0"
tlsn-server-fixture = { path = "tlsn-src/crates/server-fixture/server" }
hyper-util = "0.1.11"
hyper = "1.6.0"
clap = "4.5.37"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
ipfs-api = "0.15.0"

